<resources>
    <string name="app_name">Space DIM</string>
    <string name="login">Login to play astronaut</string>
    <string name="fake_id">astronaut n°FR8742</string>
    <string name="name">Name</string>
    <string name="content_nasa_icon">nasa red icon</string>
    <string name="content_avatar_icon">Astronaut avatar icon</string>
    <string name="launch">Launch</string>
    <string name="register">Register</string>
    <string name="waiting_room">Waiting room</string>
    <string name="join_a_room">Enter a room name to join or create a game</string>
    <string name="inactive_socket">Socket inactive</string>
    <string name="active_socket">Socket active</string>
    <string name="join_room">JOIN</string>
    <string name="no_room_joined">No room joined</string>
    <string name="set_to_ready">Set your status to READY\nWhen everyone is ready, game will start</string>
    <string name="ready">READY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waiting">Waiting</string>
    <string name="fake_level_name">You\'re currently traveling in the EmmaCheffeLand 1</string>
    <string name="win_img_desc">Win Image</string>
    <string name="loose_img_desc">Loose Image</string>
    <string name="landing_success">You\'ve successfully landed on the moon,</string>
    <string name="launch_again">RETRY</string>
    <string name="high_scores">HIGHSCORE</string>
    <string name="landing_failed">Ohh... huston we had a problem</string>
    <string name="mission_failed">Mission failed</string>
    <string name="game_loose">Haha looser !</string>
    <string name="game_win">What a team !</string>
    <string name="logo">Logo</string>
    <string name="unicorn">I AM A UNICOOOORN !</string>
    <string name="emmachefland">I am new to EmmaChefLand</string>
    <string name="score_dsc">Score image</string>
    <string name="room_name">Room name</string>
    <string name="score">Score\n0</string>
    <string name="bg_instruc">Instruction background</string>
    <string name="debug_win">[DEBUG] to win</string>
    <string name="debug_loose">[DEBUG] to loose</string>
    <string name="fake_event_txt">Il y a trop de gaz !</string>
    <string name="room">Room name</string>
    <string name="top_5">Top 5 des Emma\'players</string>
</resources>