<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.LooseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageMoon"
            style="@style/endGameImage"
            android:contentDescription="@string/win_img_desc"
            android:src="@drawable/explosion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/looseTxt"
            style="@style/activity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/landing_failed"
            android:textColor="@color/design_default_color_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageMoon" />

        <Button
            android:id="@+id/scoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            app:backgroundTint="@color/less_visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/retryBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loosed" />

        <Button
            android:id="@+id/retryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_again"
            app:layout_constraintBottom_toBottomOf="@+id/scoreBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/scoreBtn"
            app:layout_constraintTop_toTopOf="@+id/scoreBtn" />

        <TextView
            android:id="@+id/loosed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mission_failed"
            app:layout_constraintEnd_toEndOf="@+id/looseTxt"
            app:layout_constraintStart_toStartOf="@+id/looseTxt"
            app:layout_constraintTop_toBottomOf="@+id/looseTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>